--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.11.1"
+    "@actions/core": "^1.11.1",
+    "javascript-action": "file:"
   },
   "devDependencies": {
     "@babel/core": "^7.25.8",
